# cryptoracle

./: .gitignore  Cargo.toml  docker-compose.yml
src/: config.rs  errors.rs  lib.rs  main.rs  network.rs
src/clients/: cryptocompare.rs  mod.rs
