[package]
name = "cryptoracle"
version = "0.1.0"
authors = ["ilerik <erik.lite@gmail.com>"]

[dependencies]
# errors
error-chain = "*"
log = "*"

# Tokio / hyper
futures = "*"
hyper = "0.11.2"
hyper-tls = "*"
native-tls = "*"
tokio-core = "*"

# Serde and Json / Bson / TOML crates
serde_derive = "1.0"
serde = "1.0"
serde_json = "1.0"
toml = "0.4.5"
bson = "0.10.0"

# drivers
mongodb = { version = "0.3.7", features = ["ssl"] }

# utils
pretty_env_logger = "*"

[features]

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 2